# crossense

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yaml  lint_and_test.yaml  publish-package.yml
crossense/ensemble/: _bagging.py
crossense/ensemble/tests/: test_bagging.py
docs/crossense/: index.html  index.md
docs/crossense/ensemble/: index.html  index.md
docs/crossense/ensemble/tests/: index.html  index.md  test_bagging.html  test_bagging.md
